Atualizar o insta.html

--- a/insta.html
+++ b/insta.html
@@ -1,84 +1,174 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Sistema Jurídico Online</title>
-  <link rel="manifest" href="manifest.json">
-  <meta name="theme-color" content="#1a237e">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Aviator Analyzer + Jogo Ao Vivo</title>
 
-  <style>
+<style>
     body {
-      margin: 0;
-      font-family: Arial, sans-serif;
-      background: #f4f6f9;
-      color: #333;
+        font-family: Arial;
+        background: #0e0e0e;
+        color: white;
+        margin: 0;
+        padding: 0;
     }
-    header {
-      background: #1a237e;
-      color: #fff;
-      text-align: center;
-      padding: 15px;
-      font-size: 1.2rem;
-      font-weight: bold;
+
+    h1 {
+        text-align: center;
+        padding: 15px 0;
+        background: #ff004c;
+        margin: 0;
+        font-size: 24px;
     }
-    nav {
-      display: flex;
-      justify-content: center;
-      background: #283593;
-    }
-    nav button {
-      flex: 1;
-      padding: 15px;
-      border: none;
-      background: #283593;
-      color: #fff;
-      font-size: 1rem;
-      cursor: pointer;
-    }
-    nav button.active {
-      background: #1a237e;
-    }
+
     iframe {
-      width: 100%;
-      height: calc(100vh - 110px);
-      border: none;
+        width: 100%;
+        height: 70vh;
+        border: none;
     }
-  </style>
+
+    .container {
+        padding: 15px;
+    }
+
+    textarea {
+        width: 100%;
+        height: 120px;
+        padding: 10px;
+        border-radius: 10px;
+        border: none;
+        outline: none;
+        font-size: 16px;
+    }
+
+    button {
+        width: 100%;
+        padding: 15px;
+        background: #ff004c;
+        color: white;
+        border: none;
+        border-radius: 10px;
+        margin-top: 15px;
+        font-size: 18px;
+        cursor: pointer;
+    }
+
+    .box {
+        background: #1b1b1b;
+        padding: 20px;
+        margin-top: 25px;
+        border-radius: 12px;
+    }
+
+    .label {
+        font-weight: bold;
+        color: #ff004c;
+        margin-top: 10px;
+    }
+</style>
+
 </head>
 <body>
-  <header>Sistema Jurídico Online</header>
 
-  <nav>
-    <button id="btn-sheet" class="active">📑 Controle de Processos</button>
-    <button id="btn-dashboard">📊 Dashboard</button>
-  </nav>
+<h1>Aviator ao Vivo + Análise Wiggers</h1>
 
-  <!-- Área onde Sheets ou Dashboard aparecem -->
-  <iframe id="content" src="https://docs.google.com/spreadsheets/d/1z2TEGu1c9CVtN-Pz1QhGBIf-zq94ZaUBfirUKcvxD0U/edit?gid=644009686#gid=644009686"></iframe>
+<!-- JOGO AO VIVO -->
+<iframe src="https://m.big.bet.br/casino/game/3496406?provider=Spribe&from=%2Fcasino"></iframe>
 
-  <script>
-    const sheetBtn = document.getElementById("btn-sheet");
-    const dashBtn = document.getElementById("btn-dashboard");
-    const iframe = document.getElementById("content");
+<div class="container">
 
-    sheetBtn.addEventListener("click", () => {
-      iframe.src = "https://docs.google.com/spreadsheets/d/1z2TEGu1c9CVtN-Pz1QhGBIf-zq94ZaUBfirUKcvxD0U/edit?gid=644009686#gid=644009686";
-      sheetBtn.classList.add("active");
-      dashBtn.classList.remove("active");
-    });
+    <h2>📊 Digite as velas que já saíram:</h2>
 
-    dashBtn.addEventListener("click", () => {
-      iframe.src = "https://lookerstudio.google.com/embed/reporting/ef4a681f-497d-4b3e-81a5-a3b091a01167/page/n8gXF";
-      dashBtn.classList.add("active");
-      sheetBtn.classList.remove("active");
-    });
-  </script>
+    <textarea id="velasInput" placeholder="Ex: 1.21, 1.05, 3.40, 1.10, 1.15"></textarea>
 
-  <script>
-    if ("serviceWorker" in navigator) {
-      navigator.serviceWorker.register("service-worker.js");
+    <button onclick="analisar()">ANALISAR</button>
+
+    <div id="resultado" class="box" style="display:none;">
+        <h2>🔎 Resultado da Análise</h2>
+
+        <p class="label">Recomendação:</p>
+        <p id="recomendacao"></p>
+
+        <p class="label">Cash-out sugerido:</p>
+        <p id="cashout"></p>
+
+        <p class="label">Padrão detectado:</p>
+        <p id="padrao"></p>
+
+        <p class="label">Risco:</p>
+        <p id="risco"></p>
+
+        <p class="label">Rodadas para esperar:</p>
+        <p id="esperar"></p>
+    </div>
+
+</div>
+
+<script>
+function analisar() {
+    let texto = document.getElementById('velasInput').value;
+
+    if (!texto.trim()) {
+        alert("Digite as velas para analisar.");
+        return;
     }
-  </script>
+
+    let velas = texto.replace(/\n/g, ",").split(",").map(v => parseFloat(v.trim())).filter(v => !isNaN(v));
+
+    if (velas.length < 3) {
+        alert("Digite pelo menos 3 velas para análise.");
+        return;
+    }
+
+    let ultimas = velas.slice(-5);
+    let media = ultimas.reduce((a,b)=>a+b,0) / ultimas.length;
+    let crashes = ultimas.filter(v => v < 1.30).length;
+    let pico = Math.max(...ultimas);
+
+    let recomendacao = "";
+    let padrao = "";
+    let risco = "";
+    let cashout = "";
+    let esperar = "";
+
+    if (crashes >= 4) {
+        recomendacao = "Possível entrada forte na próxima rodada";
+        padrao = "Crash repetitivo — tendência de subida";
+        risco = "Baixo";
+        cashout = "1.30x a 1.50x";
+        esperar = "0";
+    }
+    else if (pico > 5) {
+        recomendacao = "Evite entrar agora";
+        padrao = "Pico recente — forte chance de crash";
+        risco = "Alto";
+        cashout = "1.20x (somente se entrar)";
+        esperar = "2 a 3 rodadas";
+    }
+    else if (media < 1.50) {
+        recomendacao = "Entrada leve recomendada";
+        padrao = "Média baixa — tendência de subida suave";
+        risco = "Médio";
+        cashout = "1.30x";
+        esperar = "0 ou 1 rodada";
+    }
+    else {
+        recomendacao = "Aguardar mais uma rodada";
+        padrao = "Padrão instável";
+        risco = "Médio";
+        cashout = "1.20x - 1.40x";
+        esperar = "1 rodada";
+    }
+
+    document.getElementById("resultado").style.display = "block";
+    document.getElementById("recomendacao").innerText = recomendacao;
+    document.getElementById("padrao").innerText = padrao;
+    document.getElementById("risco").innerText = risco;
+    document.getElementById("cashout").innerText = cashout;
+    document.getElementById("esperar").innerText = esperar;
+}
+</script>
+
 </body>
 </html>
