Atualizar o insta.html

--- a/insta.html
+++ b/insta.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Aviator Analyzer (Mobile)</title>
+<title>Aviator Analyzer + Jogo Ao Vivo</title>
 
 <style>
     body {
@@ -11,13 +11,25 @@
         background: #0e0e0e;
         color: white;
         margin: 0;
-        padding: 15px;
+        padding: 0;
     }
 
     h1 {
         text-align: center;
-        color: #ff004c;
-        margin-bottom: 10px;
+        padding: 15px 0;
+        background: #ff004c;
+        margin: 0;
+        font-size: 24px;
+    }
+
+    iframe {
+        width: 100%;
+        height: 60vh;
+        border: none;
+    }
+
+    .container {
+        padding: 15px;
     }
 
     .btn-vela {
@@ -41,7 +53,7 @@
         padding: 10px;
         border-radius: 10px;
         margin-top: 10px;
-        max-height: 200px;
+        max-height: 180px;
         overflow-y: auto;
     }
 
@@ -55,55 +67,86 @@
         justify-content: space-between;
     }
 
+    .btn-remove {
+        color: #ff004c;
+        font-weight: bold;
+        cursor: pointer;
+    }
+
     button {
-        background: #ff004c;
-        border: none;
         width: 100%;
         padding: 15px;
+        background: #ff004c;
         color: white;
+        border: none;
         border-radius: 10px;
-        margin-top: 20px;
-        font-size: 20px;
+        margin-top: 15px;
+        font-size: 18px;
         cursor: pointer;
     }
 
     .box {
-        margin-top: 25px;
         background: #1b1b1b;
         padding: 20px;
+        margin-top: 25px;
         border-radius: 12px;
     }
 
+    .label {
+        font-weight: bold;
+        color: #ff004c;
+        margin-top: 10px;
+    }
 </style>
 
 </head>
 <body>
 
-<h1>📊 Aviator Analyzer</h1>
+<h1>Aviator ao Vivo + Análise Wiggers</h1>
 
-<h3>Adicionar vela (1 toque):</h3>
+<!-- JOGO AO VIVO -->
+<iframe src="https://m.big.bet.br/casino/game/3496406?provider=Spribe&from=%2Fcasino"></iframe>
 
-<div style="display:flex; flex-wrap:wrap; justify-content:center;">
-    <div class="btn-vela" onclick="addVela(1.10)">1.10</div>
-    <div class="btn-vela" onclick="addVela(1.20)">1.20</div>
-    <div class="btn-vela" onclick="addVela(1.30)">1.30</div>
-    <div class="btn-vela" onclick="addVela(1.40)">1.40</div>
-    <div class="btn-vela" onclick="addVela(1.50)">1.50</div>
-    <div class="btn-vela" onclick="addVela(2.00)">2.00</div>
-    <div class="btn-vela" onclick="addVela(5.00)">5.00</div>
-    <div class="btn-vela" onclick="addVela(10.00)">10.00</div>
-    <div class="btn-vela" onclick="addVela(20.00)">20.00</div>
-</div>
+<div class="container">
 
-<h3>Velas adicionadas:</h3>
-<div id="lista" class="velas-list"></div>
+    <h2>📊 Adicionar Velas (1 Toque):</h2>
 
-<button onclick="analisar()">ANALISAR</button>
+    <div style="display:flex; flex-wrap:wrap; justify-content:center;">
+        <div class="btn-vela" onclick="addVela(1.10)">1.10</div>
+        <div class="btn-vela" onclick="addVela(1.20)">1.20</div>
+        <div class="btn-vela" onclick="addVela(1.30)">1.30</div>
+        <div class="btn-vela" onclick="addVela(1.40)">1.40</div>
+        <div class="btn-vela" onclick="addVela(1.50)">1.50</div>
+        <div class="btn-vela" onclick="addVela(2.00)">2.00</div>
+        <div class="btn-vela" onclick="addVela(5.00)">5.00</div>
+        <div class="btn-vela" onclick="addVela(10.00)">10.00</div>
+        <div class="btn-vela" onclick="addVela(20.00)">20.00</div>
+    </div>
 
-<div id="resultado" class="box" style="display:none;">
-    <h2>Resultado</h2>
-    <p id="recomendacao"></p>
-    <p id="info"></p>
+    <h2>📋 Velas Inseridas:</h2>
+    <div id="lista" class="velas-list"></div>
+
+    <button onclick="analisar()">ANALISAR</button>
+
+    <div id="resultado" class="box" style="display:none;">
+        <h2>🔎 Resultado da Análise</h2>
+
+        <p class="label">Recomendação:</p>
+        <p id="recomendacao"></p>
+
+        <p class="label">Cash-out sugerido:</p>
+        <p id="cashout"></p>
+
+        <p class="label">Padrão detectado:</p>
+        <p id="padrao"></p>
+
+        <p class="label">Risco:</p>
+        <p id="risco"></p>
+
+        <p class="label">Rodadas para esperar:</p>
+        <p id="esperar"></p>
+    </div>
+
 </div>
 
 <script>
@@ -125,7 +168,7 @@ function renderVelas() {
         html += `
             <div class="vela-item">
                 <span>${v.toFixed(2)}</span>
-                <span style="color:#ff004c; cursor:pointer;" onclick="remover(${i})">X</span>
+                <span class="btn-remove" onclick="remover(${i})">X</span>
             </div>
         `;
     });
@@ -143,17 +186,47 @@ function analisar() {
     let roxas = ultimas.filter(v => v >= 2 && v <= 10).length;
     let rosas = ultimas.filter(v => v > 10).length;
 
-    let rec = "";
+    let recomendacao = "";
+    let padrao = "";
+    let risco = "";
+    let cashout = "";
+    let esperar = "";
 
-    if (azuis >= 4) rec = "🔥 Entrada forte! Muitas velas azuis, tendência de subida próxima.";
-    else if (rosas > 0) rec = "❌ Perigo! Vela rosa recente. Evitar próximas 2 rodadas.";
-    else if (roxas >= 3) rec = "⚠️ Entrada moderada. Padrão médio.";
-    else rec = "Aguarde mais 1 rodada.";
+    if (azuis >= 4) {
+        recomendacao = "🔥 Entrada forte na próxima rodada!";
+        padrao = "Muitas velas azuis → tendência de subida.";
+        risco = "Baixo";
+        cashout = "1.30x a 1.60x";
+        esperar = "0";
+    }
+    else if (rosas > 0) {
+        recomendacao = "❌ Evitar entrada agora";
+        padrao = "Vela rosa recente → crash provável.";
+        risco = "Alto";
+        cashout = "—";
+        esperar = "2 rodadas";
+    }
+    else if (roxas >= 3) {
+        recomendacao = "⚠️ Entrada moderada";
+        padrao = "Velas roxas frequentes → instável";
+        risco = "Médio";
+        cashout = "1.20x a 1.40x";
+        esperar = "0 ou 1";
+    }
+    else {
+        recomendacao = "Aguardando melhor padrão";
+        padrao = "Padrão fraco";
+        risco = "Médio";
+        cashout = "1.20x";
+        esperar = "1 rodada";
+    }
 
     document.getElementById("resultado").style.display = "block";
-    document.getElementById("recomendacao").innerText = rec;
-    document.getElementById("info").innerText = 
-        `Azuis: ${azuis} | Roxas: ${roxas} | Rosas: ${rosas}`;
+    document.getElementById("recomendacao").innerText = recomendacao;
+    document.getElementById("padrao").innerText = padrao;
+    document.getElementById("risco").innerText = risco;
+    document.getElementById("cashout").innerText = cashout;
+    document.getElementById("esperar").innerText = esperar;
 }
 </script>
 
